# GHA_ECR_DEPLOY

.github/actions/docker/: action.yml
.github/workflows/: build_and_push.yml  notion.yaml
stubs/notion/: .env  Dockerfile  pyproject.toml
stubs/notion/src/mcp_notion/: server.py
stubs/slack/: Dockerfile
